--- a/setup.cfg
+++ b/setup.cfg
@@ -12,5 +12,5 @@ max-line-length = 120
 [tool:pytest]
 addopts=--doctest-modules --doctest-ignore-import-errors
 norecursedirs=.git build dist *.egg __pycache__ .cache app/migrations
-testpaths=tests/unit_tests
+testpaths=tests
 junit_suite_name = fastapi-workshop
